--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -8,102 +8,102 @@
 # Take a look to licence.txt file at plugin root folder for further details.
 
 ja:
-  error_changing_pbi_order: "Fail to sort the PBI, check its dependencies. The page will be reloaded."
-  error_changing_task_status: "Fail to change the task status."
-  error_changing_task_assigned_to: "Fail to change the task assignee."
-  error_changing_value: "Fail to change the value."
-  error_creating_pbi: "Fail to create a product backlog item (%{message})."
-  error_creating_task: "Fail to create a task (%{message})."
-  error_creating_time_entry: "Fail to create a time entry (%{message})."
-  error_no_product_backlog: "There is none product backlog yet, please ask this project administrator to create it in settings tab."
-  error_no_sprints: "There are none Sprints defined yet, please ask this project administrator to create them in settings tab."
-  error_updating_pbi: "Error updating the PBI (%{message})"
-  error_updating_task: "Error updating the task (%{message})"
+  error_changing_pbi_order: "PBIのソートに失敗しました。依存状態を確認してください。ページがリロードされます。"
+  error_changing_task_status: "タスクステータスの変更に失敗しました。"
+  error_changing_task_assigned_to: "タスク割当先の変更に失敗しました。"
+  error_changing_value: "値の変更に失敗しました。"
+  error_creating_pbi: "プロダクトバックログアイテム (%{message}) の作成に失敗しました。"
+  error_creating_task: "タスク (%{message}) の作成に失敗しました。"
+  error_creating_time_entry: "タイムエントリー (%{message}) の作成に失敗しました。"
+  error_no_product_backlog: "プロダクトバックログがありません。プロジェクトの設定タブで作成するため管理者に連絡してください。"
+  error_no_sprints: "スプリントが定義されていません。プロジェクトの設定タブで作成するため管理者に連絡してください。"
+  error_updating_pbi: "PBI更新エラー (%{message})"
+  error_updating_task: "タスク更新エラー (%{message})"
   field_end_date: "期日"
-  field_pending_effort: "Pending effort"
+  field_pending_effort: "残存作業量"
   field_position: "ポジション"
   field_sprint: "スプリント"
   label_add_task: "PBIに %{tracker} を追加するためのポップアップウィンドウを開く"
   label_blocked: "ブロック"
-  label_check_dependencies: "依存関係を確認する"
-  label_create_subtask: "Create subtask"
-  label_date_previous_to: "Previous to %{date}"
-  label_doer: "Doer"
-  label_done_effort: "Done effort"
-  label_edit_effort: "Edit effort"
+  label_check_dependencies: "依存状態を確認する"
+  label_create_subtask: "サブタスクを作成する"
+  label_date_previous_to: "%{date} 以前"
+  label_doer: "実施者"
+  label_done_effort: "実績作業量"
+  label_edit_effort: "作業量の編集"
   label_edit_pbi: "PBIを編集するためのポップアップウィンドウを開く"
   label_edit_task: "タスクを編集するためのポップアップウィンドウを開く"
-  label_end: "End"
-  label_estimated_effort: "Estimated effort"
-  label_estimated_effort_tooltip: "Estimated effort (%{date}): %{hours} h"
-  label_estimated_vs_done_effort: "Estimated effort vs done effort"
-  label_invalid_dependencies: "There are invalid dependencies for the following PBIs:"
+  label_end: "終了"
+  label_estimated_effort: "見積作業量"
+  label_estimated_effort_tooltip: "見積作業量 (%{date}): %{hours} h"
+  label_estimated_vs_done_effort: "見積作業量 vs 実績作業量"
+  label_invalid_dependencies: "次のPBIに間違った依存状態があります:"
   label_invalid_dependencies_for_pbi: "%{pbi} blocks but it comes after:"
-  label_issue_deviation: "This issue has a deviation of %{deviation}%"
-  label_issue_speed: "The speed of this issue is %{speed}%"
+  label_issue_deviation: "このチケットは %{deviation}% の偏差があります。"
+  label_issue_speed: "このチケットの速度は %{speed}% です"
   label_menu_product_backlog: "バックログ"
   label_menu_sprint: "スプリント"
-  label_move_pbi_after: "Move after"
-  label_move_pbi_before: "Move before"
+  label_move_pbi_after: "後に移動"
+  label_move_pbi_before: "前に移動"
   label_move_pbi_to_last_sprint: "最新のスプリントに移動する"
   label_move_pbi_to_product_backlog: "プロダクトバックログに移動する"
-  label_no_invalid_dependencies: "There're not invalid dependencies."
+  label_no_invalid_dependencies: "間違った依存関係はありません。"
   label_pbi_plural: "プロダクトバックログアイテム"
   label_pbi_post_it: "プロダクトバックログアイテム付箋"
-  label_pending_effort_tooltip: "Pending effort (%{date}): %{hours} h"
-  label_pending_story_points: "Pending story points %{pending_story_points} sp (%{sprint}: %{story_points} sp)"
-  label_plugin_license: "プラグインライセンス"
-  label_plugin_license_title: "Plugin license, please read carefully"
+  label_pending_effort_tooltip: "残存作業量 (%{date}): %{hours} h"
+  label_pending_story_points: "残存ストーリーポイント %{pending_story_points} sp (%{sprint}: %{story_points} sp)"
+  label_plugin_license: "プラグインのライセンス"
+  label_plugin_license_title: "プラグインのライセンスです。注意して読んでください。"
   label_post_it: "付箋"
   label_product_backlog: "プロダクトバックログ"
   label_product_backlog_burndown_chart: "プロダクトバックログバーンダウン"
   label_product_backlog_new: "新しいプロダクトバックログ"
   label_release_plan: "リリースプラン"
-  label_release_plan_stats: "%{sps} SP と %{pbis} PBI の合計（予定工数のない %{pbis_without_sps} PBI が他にあります）"
-  label_reviewer: "Reviewer"
-  label_setting_blocked_custom_field: "Blocked custom field"
-  label_setting_check_dependencies_on_pbi_sorting: "Check PBIs dependencies on sorting"
-  label_setting_create_journal_on_pbi_position_change: "Create journal on a product backlog item position change"
-  label_setting_fields_on_tracker: "%{tracker} に使用するフィールド"
-  label_setting_high_speed: "High speed percentage"
-  label_setting_inherit_pbi_attributes: "When creating a task inherit parent product backlog item attributes"
-  label_setting_low_speed: "Low speed percentage"
-  label_setting_lowest_speed: "Lowest speed percentage"
-  label_setting_pbi_statuses: "PBI statuses for Product backlog & Sprint board"
-  label_setting_product_burndown_sprints: "Calculate it with this number of Sprints"
-  label_setting_render_author_on_pbi: "担当者を表示する"
+  label_release_plan_stats: "全部で %{sps} SP と %{pbis} PBI （見積もっていない %{pbis_without_sps} PBI が他にあります）"
+  label_reviewer: "レビューア"
+  label_setting_blocked_custom_field: "ブロックのカスタムフィールド"
+  label_setting_check_dependencies_on_pbi_sorting: "ソート時にPBIの依存関係をチェックする"
+  label_setting_create_journal_on_pbi_position_change: "プロダクトバックログアイテムのポジション変更を履歴に残す"
+  label_setting_fields_on_tracker: "%{tracker} で使用するフィールド"
+  label_setting_high_speed: "高速の閾値 (%)"
+  label_setting_inherit_pbi_attributes: "タスク作成時に親プロダクトバックログアイテムの属性を継承する"
+  label_setting_low_speed: "低速注意の閾値 (%)"
+  label_setting_lowest_speed: "低速警告の閾値 (%)"
+  label_setting_pbi_statuses: "プロダクトバックログとスプリントボードに含めるPBIのステータス"
+  label_setting_product_burndown_sprints: "速度の算出に使用するスプリント数"
+  label_setting_render_author_on_pbi: "作成者を表示する"
   label_setting_render_category_on_pbi: "カテゴリを表示する"
   label_setting_render_pbis_speed: "PBI速度を表示する"
   label_setting_render_plugin_tips: "スクラムプラグインチップスを表示する"
   label_setting_render_position_on_pbi: "ポジションを表示する"
   label_setting_render_tasks_speed: "タスク速度を表示する"
-  label_setting_render_updated_on_pbi: "更新時刻を表示する"
+  label_setting_render_updated_on_pbi: "更新日時を表示する"
   label_setting_render_version_on_pbi: "バージョンを表示する"
   label_setting_sprint_board_fields_on_tracker: "%{tracker} に表示するフィールド"
-  label_setting_story_points_custom_field: "ストーリーポイントカスタムフィールド"
+  label_setting_story_points_custom_field: "ストーリーポイントのカスタムフィールド"
   label_setting_task_statuses: "スプリントボード用のタスクステータス"
-  label_setting_verification_activities: "Verification activities"
+  label_setting_verification_activities: "検証する活動"
   label_scrum: "スクラム"
   label_sprint: "スプリント"
   label_sprint_board: "スプリントボード"
   label_sprint_burndown_chart: "スプリントバーンダウン"
-  label_sprint_burndown_chart_name: "%{name} burndown"
+  label_sprint_burndown_chart_name: "%{name} バーンダウン"
   label_sprint_new: "新しいスプリント"
   label_sprint_plural: "スプリント"
   label_sprint_stats: "スプリント状態"
-  label_sprint_stats_name: "%{name} stats"
+  label_sprint_stats_name: "%{name} 状態"
   label_sps_by_pbi_category: "PBIのカテゴリ毎のSP"
   label_sps_by_pbi_creation_date: "PBIの作成日毎のSP"
   label_sps_by_pbi_type: "PBIのトラッカー毎のSP"
   label_sps_stat: "(%{sps} sp - %{percentage}%)"
-  label_sps_total: "Total (%{sps} sp)"
+  label_sps_total: "合計 (%{sps} sp)"
   label_story_point_plural: "ストーリーポイント"
   label_story_point_unit: "sp"
   label_task_plural: "タスク"
   label_time_by_activity: "活動毎の時間"
   label_time_by_member_and_activity: "メンバーと活動毎の時間"
   label_time_stat: "(%{time} h - %{percentage}%)"
-  label_time_total: "Total (%{time} h)"
+  label_time_total: "合計 (%{time} h)"
   label_tip_new_product_backlog_link: "設定 ≫ スプリント ≫ 新しいプロダクトバックログ"
   label_tip_new_version_link: "設定 ≫ バージョン ≫ 新しいバージョン"
   label_tip_new_sprint_link: "設定 ≫ スプリント ≫ 新しいスプリント"
@@ -119,33 +119,33 @@ ja:
   label_tip_project_without_members: "メンバーが登録されていません。%{link} で追加できます。"
   label_tip_project_without_versions: "リリースプラン用のバージョンが登録されていません。%{link} で追加できます。"
   label_tip_sprint_board_link: "スプリント ≫ スプリントボード"
-  label_tip_sprint_effort_link: "設定 ≫ スプリント ≫ Edit effort"
-  label_tip_sprint_without_efforts: "Sprint without estimated effort, %{link} で追加できます。"
-  label_tip_sprint_without_pbis: "PBIがありません。you can add them in %{sprint_board_link} or moving them to the Sprint in %{product_backlog_link}"
+  label_tip_sprint_effort_link: "設定 ≫ スプリント ≫ 作業量の編集"
+  label_tip_sprint_without_efforts: "見積作業量のないスプリントです。%{link} で追加できます。"
+  label_tip_sprint_without_pbis: "PBIがありません。%{sprint_board_link} で追加するか、%{product_backlog_link} のスプリントを移動できます。"
   label_tip_sprint_without_tasks: "タスクがありません。%{link} で追加できます。"
-  label_tip_title: "Scrum plugin tips"
-  label_total_effort: "Total effort (spent + pending)"
+  label_tip_title: "スクラムプラグインチップス"
+  label_total_effort: "合計作業量 (実績 + 残存)"
   label_velocity_all_pbis:
-    one: "Use all PBIs from last Sprint to calculate the velocity"
-    other: "Use all PBIs from last %{count} Sprints to calculate the velocity"
-  label_velocity_custom: "Custom value:"
-  label_velocity_only_scheduled_pbis: "Only scheduled ones"
-  notice_pbi_created: "The product backlog item was successfully created"
-  notice_sprint_has_issues: "The Sprint has issues"
-  notice_task_created: "The task was successfully created"
-  notice_unable_delete_sprint: "Fail to delete Sprint"
+    one: "最後のスプリントに含まれるPBIをベロシティ算出に使用する"
+    other: "最後から %{count} つまでのスプリントに含まれるPBIをベロシティ算出に使用する"
+  label_velocity_custom: "カスタム値:"
+  label_velocity_only_scheduled_pbis: "スケジュールされたもののみ"
+  notice_pbi_created: "プロダクトバックログアイテムを作成しました"
+  notice_sprint_has_issues: "スプリントにチケットがあります"
+  notice_task_created: "タスクを作成しました"
+  notice_unable_delete_sprint: "スプリントの削除失敗"
   project_module_scrum: "スクラム"
-  permission_edit_product_backlog: "Edit product backlog"
-  permission_edit_sprint_board: "Edit Sprint board"
-  permission_manage_sprints: "Manage Sprints"
-  permission_sort_product_backlog: "Sort product backlog"
-  permission_view_product_backlog: "View product backlog"
-  permission_view_product_backlog_burndown: "View product backlog burndown"
-  permission_view_release_plan: "View release plan"
-  permission_view_sprint_board: "View Sprint board"
-  permission_view_sprint_burndown: "View Sprint burndown"
-  permission_view_sprint_stats: "View Sprint stats"
-  permission_view_sprint_stats_by_member: "View Sprint stats by member"
+  permission_edit_product_backlog: "プロダクトバックログの編集"
+  permission_edit_sprint_board: "スプリントボードの編集"
+  permission_manage_sprints: "スプリントの管理"
+  permission_sort_product_backlog: "プロダクトバックログの並べ替え"
+  permission_view_product_backlog: "プロダクトバックログの閲覧"
+  permission_view_product_backlog_burndown: "プロダクトバックログバーンダウンの閲覧"
+  permission_view_release_plan: "リリースプランの閲覧"
+  permission_view_sprint_board: "スプリントボードの閲覧"
+  permission_view_sprint_burndown: "スプリントバーンダウンの閲覧"
+  permission_view_sprint_stats: "スプリント状態の閲覧"
+  permission_view_sprint_stats_by_member: "メンバー毎のスプリント状態の閲覧"
   date:
     formats:
       scrum_day: "%a"
