--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -37,10 +37,12 @@ ja:
   label_estimated_effort: "見積作業量"
   label_estimated_effort_tooltip: "見積作業量 (%{date}): %{hours} h"
   label_estimated_vs_done_effort: "見積作業量 vs 実績作業量"
+  label_hours_per_story_point: "ストーリーポイント毎の時間"
   label_invalid_dependencies: "次のPBIに間違った依存状態があります:"
   label_invalid_dependencies_for_pbi: "%{pbi} blocks but it comes after:"
   label_issue_deviation: "このチケットは %{deviation}% の偏差があります。"
   label_issue_speed: "このチケットの速度は %{speed}% です"
+  label_media_last_n_sprints: "最後の %{n} スプリントのメディア"
   label_menu_product_backlog: "バックログ"
   label_menu_sprint: "スプリント"
   label_move_pbi_after: "後に移動"
@@ -61,6 +63,7 @@ ja:
   label_release_plan: "リリースプラン"
   label_release_plan_stats: "全部で %{sps} SP と %{pbis} PBI （見積もっていない %{pbis_without_sps} PBI が他にあります）"
   label_reviewer: "レビューア"
+  label_scrum_stats: "スクラム状態"
   label_setting_blocked_custom_field: "ブロックのカスタムフィールド"
   label_setting_check_dependencies_on_pbi_sorting: "ソート時にPBIの依存関係をチェックする"
   label_setting_create_journal_on_pbi_position_change: "プロダクトバックログアイテムのポジション変更を履歴に残す"
@@ -120,6 +123,7 @@ ja:
   label_tip_project_without_versions: "リリースプラン用のバージョンが登録されていません。%{link} で追加できます。"
   label_tip_sprint_board_link: "スプリント ≫ スプリントボード"
   label_tip_sprint_effort_link: "設定 ≫ スプリント ≫ 作業量の編集"
+  label_tip_sprint_with_orphan_tasks: "孤立した（親PBIがない）タスク %{link} があります。"
   label_tip_sprint_without_efforts: "見積作業量のないスプリントです。%{link} で追加できます。"
   label_tip_sprint_without_pbis: "PBIがありません。%{sprint_board_link} で追加するか、%{product_backlog_link} のスプリントを移動できます。"
   label_tip_sprint_without_tasks: "タスクがありません。%{link} で追加できます。"
@@ -139,9 +143,11 @@ ja:
   permission_edit_sprint_board: "スプリントボードの編集"
   permission_manage_sprints: "スプリントの管理"
   permission_sort_product_backlog: "プロダクトバックログの並べ替え"
+  permission_sort_sprint_board: "スプリントボードのソート"
   permission_view_product_backlog: "プロダクトバックログの閲覧"
   permission_view_product_backlog_burndown: "プロダクトバックログバーンダウンの閲覧"
   permission_view_release_plan: "リリースプランの閲覧"
+  permission_view_scrum_stats: "スクラム状態の閲覧"
   permission_view_sprint_board: "スプリントボードの閲覧"
   permission_view_sprint_burndown: "スプリントバーンダウンの閲覧"
   permission_view_sprint_stats: "スプリント状態の閲覧"
