--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -95,6 +95,8 @@ ja:
   label_sprint_plural: "スプリント"
   label_sprint_stats: "スプリント状態"
   label_sprint_stats_name: "%{name} 状態"
+  label_sprint_status_closed: "クローズ"
+  label_sprint_status_open: "オープン"
   label_sps_by_pbi_category: "PBIのカテゴリ毎のSP"
   label_sps_by_pbi_creation_date: "PBIの作成日毎のSP"
   label_sps_by_pbi_type: "PBIのトラッカー毎のSP"
@@ -134,6 +136,7 @@ ja:
     other: "最後から %{count} つまでのスプリントに含まれるPBIをベロシティ算出に使用する"
   label_velocity_custom: "カスタム値:"
   label_velocity_only_scheduled_pbis: "スケジュールされたもののみ"
+  label_velocity_only_scheduled_pbis_hint: "スプリント開始後に作成したPBIを計算から除外する"
   notice_pbi_created: "プロダクトバックログアイテムを作成しました"
   notice_sprint_has_issues: "スプリントにチケットがあります"
   notice_task_created: "タスクを作成しました"
