--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,6 +22,8 @@ en:
   field_end_date: "End date"
   field_pending_effort: "Pending effort"
   field_position: "Position"
+  field_shared: "Shared"
+  field_shared_note: "A shared Sprint is visible in child projects, so you will be able to assign child projects issues to this Sprint."
   field_sprint: "Sprint"
   label_add_task: "Opens a pop-up windows to add a %{tracker} to this PBI"
   label_blocked: "Blocked"
@@ -95,6 +97,8 @@ en:
   label_sprint_plural: "Sprints"
   label_sprint_stats: "Sprint stats"
   label_sprint_stats_name: "%{name} stats"
+  label_sprint_status_closed: "Closed"
+  label_sprint_status_open: "Open"
   label_sps_by_pbi_category: "SPs by PBI category"
   label_sps_by_pbi_creation_date: "SPs by PBI creation date"
   label_sps_by_pbi_type: "SPs by PBI type"
@@ -134,6 +138,7 @@ en:
     other: "Use all PBIs from last %{count} Sprints to calculate the velocity"
   label_velocity_custom: "Custom value:"
   label_velocity_only_scheduled_pbis: "Only scheduled ones"
+  label_velocity_only_scheduled_pbis_hint: "This excludes from calculus any PBI created once the Sprint has started"
   notice_pbi_created: "The product backlog item was successfully created"
   notice_sprint_has_issues: "The Sprint has issues"
   notice_task_created: "The task was successfully created"
