--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -26,7 +26,9 @@ ja:
   field_shared_note: "共有スプリントはサブプロジェクトに表示され、サブプロジェクトのチケットをこのスプリントに割り当てることができます。"
   field_sprint: "スプリント"
   label_add_task: "PBIに %{tracker} を追加するためのポップアップウィンドウを開く"
+  label_begin: "開始"
   label_blocked: "ブロック"
+  label_burndown: "%{name} バーンダウン"
   label_check_dependencies: "依存状態を確認する"
   label_create_subtask: "サブタスクを作成する"
   label_date_previous_to: "%{date} 以前"
@@ -39,6 +41,9 @@ ja:
   label_estimated_effort: "見積作業量"
   label_estimated_effort_tooltip: "見積作業量 (%{date}): %{hours} h"
   label_estimated_vs_done_effort: "見積作業量 vs 実績作業量"
+  label_exit_fullscreen: "フルスクリーン解除"
+  label_filter_by_assignee: "Filter by assignee"
+  label_fullscreen: "フルスクリーン"
   label_hours_per_story_point: "ストーリーポイント毎の時間"
   label_invalid_dependencies: "次のPBIに間違った依存状態があります:"
   label_invalid_dependencies_for_pbi: "%{pbi} blocks but it comes after:"
@@ -50,11 +55,13 @@ ja:
   label_move_pbi_after: "後に移動"
   label_move_pbi_before: "前に移動"
   label_move_pbi_to_last_sprint: "最新のスプリントに移動する"
-  label_move_pbi_to_product_backlog: "プロダクトバックログに移動する"
+  label_move_pbi_to_name: "%{name} に移動する"
   label_no_invalid_dependencies: "間違った依存関係はありません。"
   label_pbi_plural: "プロダクトバックログアイテム"
   label_pbi_post_it: "プロダクトバックログアイテム付箋"
   label_pending_effort_tooltip: "残存作業量 (%{date}): %{hours} h"
+  label_pending_sps: "残存 SPs"
+  label_pending_sps_tooltip: "残存 SPs (%{date}): %{sps}"
   label_pending_story_points: "残存ストーリーポイント %{pending_story_points} sp (%{sprint}: %{story_points} sp)"
   label_plugin_license: "プラグインのライセンス"
   label_plugin_license_title: "プラグインのライセンスです。注意して読んでください。"
@@ -62,12 +69,17 @@ ja:
   label_product_backlog: "プロダクトバックログ"
   label_product_backlog_burndown_chart: "プロダクトバックログバーンダウン"
   label_product_backlog_new: "新しいプロダクトバックログ"
+  label_product_backlog_plural: "プロダクトバックログ"
   label_release_plan: "リリースプラン"
+  label_release_plan_name: "%{name} リリースプラン"
   label_release_plan_stats: "全部で %{sps} SP と %{pbis} PBI （見積もっていない %{pbis_without_sps} PBI が他にあります）"
   label_reviewer: "レビューア"
   label_scrum_stats: "スクラム状態"
+  label_setting_auto_update_pbi_status: "親PBIを自動更新"
+  label_setting_auto_update_pbi_status_explanation: "子PBIの状態により親PBIの状態を変更する"
   label_setting_blocked_custom_field: "ブロックのカスタムフィールド"
   label_setting_check_dependencies_on_pbi_sorting: "ソート時にPBIの依存関係をチェックする"
+  label_setting_clear_new_tasks_assignee: "新規状態でタスクへの割り当てをクリアする"
   label_setting_create_journal_on_pbi_position_change: "プロダクトバックログアイテムのポジション変更を履歴に残す"
   label_setting_fields_on_tracker: "%{tracker} で使用するフィールド"
   label_setting_high_speed: "高速の閾値 (%)"
@@ -76,6 +88,7 @@ ja:
   label_setting_lowest_speed: "低速警告の閾値 (%)"
   label_setting_pbi_statuses: "プロダクトバックログとスプリントボードに含めるPBIのステータス"
   label_setting_product_burndown_sprints: "速度の算出に使用するスプリント数"
+  label_setting_random_postit_rotation: "Random post-it rotation"
   label_setting_render_author_on_pbi: "作成者を表示する"
   label_setting_render_category_on_pbi: "カテゴリを表示する"
   label_setting_render_pbis_speed: "PBI速度を表示する"
@@ -84,7 +97,10 @@ ja:
   label_setting_render_tasks_speed: "タスク速度を表示する"
   label_setting_render_updated_on_pbi: "更新日時を表示する"
   label_setting_render_version_on_pbi: "バージョンを表示する"
+  label_setting_simple_pbi_custom_field: "Simple PBI custom field"
   label_setting_sprint_board_fields_on_tracker: "%{tracker} に表示するフィールド"
+  label_setting_sprint_burndown_day_zero: "Day 0"
+  label_setting_sprint_burndown_day_zero_explanation: "Use 'Begin' as an special date at the beginning of the Sprint burndown instead of 'End'"
   label_setting_story_points_custom_field: "ストーリーポイントのカスタムフィールド"
   label_setting_task_statuses: "スプリントボード用のタスクステータス"
   label_setting_verification_activities: "検証する活動"
@@ -92,7 +108,9 @@ ja:
   label_sprint: "スプリント"
   label_sprint_board: "スプリントボード"
   label_sprint_burndown_chart: "スプリントバーンダウン"
-  label_sprint_burndown_chart_name: "%{name} バーンダウン"
+  label_sprint_burndown_chart_hours: "スプリントバーンダウン (hours)"
+  label_sprint_burndown_chart_sps: "スプリントバーンダウン (SPs)"
+  label_sprint_burndown_chart_name: "%{name} burndown"
   label_sprint_new: "新しいスプリント"
   label_sprint_plural: "スプリント"
   label_sprint_stats: "スプリント状態"
@@ -115,7 +133,7 @@ ja:
   label_tip_new_version_link: "設定 ≫ バージョン ≫ 新しいバージョン"
   label_tip_new_sprint_link: "設定 ≫ スプリント ≫ 新しいスプリント"
   label_tip_no_permissions: "プラグイン権限が設定されていません。%{link} で設定できます。"
-  label_tip_no_product_backlog: "プロダクトバックログがありません。%{link} で作成できます。"
+  label_tip_no_product_backlogs: "プロダクトバックログがありません。%{link} で作成できます。"
   label_tip_no_sprints: "スプリントがありません。%{link} で作成できます。"
   label_tip_no_plugin_setting: "プラグイン設定“%{setting}”が構成されていません。%{link} で構成できます。"
   label_tip_permissions_link: "管理 ≫ ロールと権限 ≫ 権限レポート"
