--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,7 +26,9 @@ en:
   field_shared_note: "A shared Sprint is visible in child projects, so you will be able to assign child projects issues to this Sprint."
   field_sprint: "Sprint"
   label_add_task: "Opens a pop-up windows to add a %{tracker} to this PBI"
+  label_begin: "Begin"
   label_blocked: "Blocked"
+  label_burndown: "%{name} burndown"
   label_check_dependencies: "Check dependencies"
   label_create_subtask: "Create subtask"
   label_date_previous_to: "Previous to %{date}"
@@ -39,6 +41,9 @@ en:
   label_estimated_effort: "Estimated effort"
   label_estimated_effort_tooltip: "Estimated effort (%{date}): %{hours} h"
   label_estimated_vs_done_effort: "Estimated effort vs done effort"
+  label_exit_fullscreen: "Exit fullscreen"
+  label_filter_by_assignee: "Filter by assignee"
+  label_fullscreen: "Fullscreen"
   label_hours_per_story_point: "Hours per story point"
   label_invalid_dependencies: "There are invalid dependencies for the following PBIs:"
   label_invalid_dependencies_for_pbi: "%{pbi} blocks but it comes after:"
@@ -50,11 +55,13 @@ en:
   label_move_pbi_after: "Move after"
   label_move_pbi_before: "Move before"
   label_move_pbi_to_last_sprint: "Move to last Sprint"
-  label_move_pbi_to_product_backlog: "Move to product backlog"
+  label_move_pbi_to_name: "Move to %{name}"
   label_no_invalid_dependencies: "There're not invalid dependencies."
   label_pbi_plural: "Product backlog items"
   label_pbi_post_it: "Product backlog item post-it" 
   label_pending_effort_tooltip: "Pending effort (%{date}): %{hours} h"
+  label_pending_sps: "Pending SPs"
+  label_pending_sps_tooltip: "Pending SPs (%{date}): %{sps}"
   label_pending_story_points: "Pending story points %{pending_story_points} sp (%{sprint}: %{story_points} sp)"
   label_plugin_license: "Plugin license"
   label_plugin_license_title: "Plugin license, please read carefully"
@@ -62,12 +69,17 @@ en:
   label_product_backlog: "Product backlog"
   label_product_backlog_burndown_chart: "Product backlog burndown"
   label_product_backlog_new: "New product backlog"
+  label_product_backlog_plural: "Product backlogs"
   label_release_plan: "Release plan"
+  label_release_plan_name: "%{name} release plan"
   label_release_plan_stats: "A total of %{sps} SPs and %{pbis} PBIs (there are other %{pbis_without_sps} PBIs without estimation)"
   label_reviewer: "Reviewer"
   label_scrum_stats: "Scrum stats"
+  label_setting_auto_update_pbi_status: "Auto update parent PBIs"
+  label_setting_auto_update_pbi_status_explanation: "Change parent PBI status based on child tasks status."
   label_setting_blocked_custom_field: "Blocked custom field"
   label_setting_check_dependencies_on_pbi_sorting: "Check PBIs dependencies on sorting"
+  label_setting_clear_new_tasks_assignee: "Clear assignee for tasks in new status"
   label_setting_create_journal_on_pbi_position_change: "Create journal on a product backlog item position change"
   label_setting_fields_on_tracker: "Fields to use with %{tracker}"
   label_setting_high_speed: "High speed percentage"
@@ -76,6 +88,7 @@ en:
   label_setting_lowest_speed: "Lowest speed percentage"
   label_setting_pbi_statuses: "PBI statuses for Product backlog & Sprint board"
   label_setting_product_burndown_sprints: "Calculate it with this number of Sprints"
+  label_setting_random_postit_rotation: "Random post-it rotation"
   label_setting_render_author_on_pbi: "Render author"
   label_setting_render_category_on_pbi: "Render category"
   label_setting_render_pbis_speed: "Render PBIs speed"
@@ -84,7 +97,10 @@ en:
   label_setting_render_tasks_speed: "Render tasks speed"
   label_setting_render_updated_on_pbi: "Render update timestamp"
   label_setting_render_version_on_pbi: "Render version"
+  label_setting_simple_pbi_custom_field: "Simple PBI custom field"
   label_setting_sprint_board_fields_on_tracker: "Fields to render with %{tracker}"
+  label_setting_sprint_burndown_day_zero: "Day 0"
+  label_setting_sprint_burndown_day_zero_explanation: "Use 'Begin' as an special date at the beginning of the Sprint burndown instead of 'End'"
   label_setting_story_points_custom_field: "Story points custom field"
   label_setting_task_statuses: "Task statuses for Sprint board"
   label_setting_verification_activities: "Verification activities"
@@ -92,6 +108,8 @@ en:
   label_sprint: "Sprint"
   label_sprint_board: "Sprint board"
   label_sprint_burndown_chart: "Sprint burndown"
+  label_sprint_burndown_chart_hours: "Sprint burndown (hours)"
+  label_sprint_burndown_chart_sps: "Sprint burndown (SPs)"
   label_sprint_burndown_chart_name: "%{name} burndown"
   label_sprint_new: "New Sprint"
   label_sprint_plural: "Sprints"
@@ -115,7 +133,7 @@ en:
   label_tip_new_version_link: "Settings » Versions » New version"
   label_tip_new_sprint_link: "Settings » Sprints » New Sprint"
   label_tip_no_permissions: "Plugin permissions aren't configured, you can configure them in %{link}"
-  label_tip_no_product_backlog: "There isn't product backlog, you can create it in %{link}"
+  label_tip_no_product_backlogs: "There aren't product backlogs, you can create them in %{link}"
   label_tip_no_sprints: "There aren't Sprints, you can create them in %{link}"
   label_tip_no_plugin_setting: "“%{setting}” plugin setting isn't configured, you can configure it in %{link}"
   label_tip_permissions_link: "Administration » Roles & permissions » Permissions report"
