--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -25,11 +25,16 @@ ja:
   field_shared: "共有"
   field_shared_note: "共有スプリントはサブプロジェクトに表示され、サブプロジェクトのチケットをこのスプリントに割り当てることができます。"
   field_sprint: "スプリント"
+  label_all_but_total: "all except total"
+  label_add_pbi_at_bottom: "Add %{tracker} at product backlog top"
+  label_add_pbi_at_top: "Add %{tracker} at product backlog bottom"
   label_add_task: "PBIに %{tracker} を追加するためのポップアップウィンドウを開く"
   label_begin: "開始"
   label_blocked: "ブロック"
   label_burndown: "%{name} バーンダウン"
   label_check_dependencies: "依存状態を確認する"
+  label_closed_sps: "Closed SPs"
+  label_closed_story_points: "Closed story points"
   label_create_subtask: "サブタスクを作成する"
   label_date_previous_to: "%{date} 以前"
   label_doer: "実施者"
@@ -43,26 +48,37 @@ ja:
   label_estimated_vs_done_effort: "見積作業量 vs 実績作業量"
   label_exit_fullscreen: "フルスクリーン解除"
   label_filter_by_assignee: "Filter by assignee"
+  label_filter_by_project: "Filter by project"
   label_fullscreen: "フルスクリーン"
   label_hours_per_story_point: "ストーリーポイント毎の時間"
   label_invalid_dependencies: "次のPBIに間違った依存状態があります:"
   label_invalid_dependencies_for_pbi: "%{pbi} blocks but it comes after:"
   label_issue_deviation: "このチケットは %{deviation}% の偏差があります。"
   label_issue_speed: "このチケットの速度は %{speed}% です"
+  label_limited_to_n_series: "Project series have been limited to %{n}. Criteria: not closed projects, pending SPs."
   label_media_last_n_sprints: "最後の %{n} スプリントのメディア"
   label_menu_product_backlog: "バックログ"
   label_menu_sprint: "スプリント"
+  label_move_not_closed_pbis_to_last_sprint: "Move not closed PBIs to latest Sprint"
   label_move_pbi_after: "後に移動"
   label_move_pbi_before: "前に移動"
   label_move_pbi_to_last_sprint: "最新のスプリントに移動する"
   label_move_pbi_to_name: "%{name} に移動する"
   label_no_invalid_dependencies: "間違った依存関係はありません。"
+  label_nothing_to_move: "Nothing to move."
+  label_only_total: "only total"
   label_pbi_plural: "プロダクトバックログアイテム"
   label_pbi_post_it: "プロダクトバックログアイテム付箋"
+  label_pbi_status_auto_updated_all_tasks_closed: "PBI status auto updated to %{pbi_status} because all tasks were closed"
+  label_pbi_status_auto_updated_all_tasks_new: "PBI status auto updated to %{pbi_status} because all tasks were on %{task_status} status"
+  label_pbi_status_auto_updated_one_task_no_new: "PBI status auto updated to %{pbi_status} because at least one task wasn't on %{task_status} status"
+  label_pbis_count: "Closed/total PBIs"
+  label_pbis_moved: "Moved PBIs: %{pbis}."
   label_pending_effort_tooltip: "残存作業量 (%{date}): %{hours} h"
   label_pending_sps: "残存 SPs"
   label_pending_sps_tooltip: "残存 SPs (%{date}): %{sps}"
   label_pending_story_points: "残存ストーリーポイント %{pending_story_points} sp (%{sprint}: %{story_points} sp)"
+  label_percentage_closed_sps: "Closed/total SPs %"
   label_plugin_license: "プラグインのライセンス"
   label_plugin_license_title: "プラグインのライセンスです。注意して読んでください。"
   label_post_it: "付箋"
@@ -73,6 +89,8 @@ ja:
   label_release_plan: "リリースプラン"
   label_release_plan_name: "%{name} リリースプラン"
   label_release_plan_stats: "全部で %{sps} SP と %{pbis} PBI （見積もっていない %{pbis_without_sps} PBI が他にあります）"
+  label_remaining_story_point_plural: "Remaining story points"
+  label_remaining_story_point_unit: "rsp"
   label_reviewer: "レビューア"
   label_scrum_stats: "スクラム状態"
   label_setting_auto_update_pbi_status: "親PBIを自動更新"
@@ -86,9 +104,15 @@ ja:
   label_setting_inherit_pbi_attributes: "タスク作成時に親プロダクトバックログアイテムの属性を継承する"
   label_setting_low_speed: "低速注意の閾値 (%)"
   label_setting_lowest_speed: "低速警告の閾値 (%)"
+  label_setting_pbi_is_closed_if_tasks_are_closed: "PBI closed if children are closed"
+  label_setting_pbi_is_closed_if_tasks_are_closed_explanation: "This does not change PBI status but affects Scrum plugin features (boards, burndowns...)."
   label_setting_pbi_statuses: "プロダクトバックログとスプリントボードに含めるPBIのステータス"
+  label_setting_product_burndown_extra_sprints: "Render extra Sprints for subprojects"
+  label_setting_product_burndown_extra_sprints_explanation: "How many Sprints are rendered after tatol serie finishes (0 for unlimit)."
   label_setting_product_burndown_sprints: "速度の算出に使用するスプリント数"
+  label_setting_product_burndown_sprints_explanation: "Put 0 to use all past Sprints in the speed calculation."
   label_setting_random_postit_rotation: "Random post-it rotation"
+  label_setting_remaining_story_points_custom_field: "Remaining story points custom field"
   label_setting_render_author_on_pbi: "作成者を表示する"
   label_setting_render_category_on_pbi: "カテゴリを表示する"
   label_setting_render_pbis_speed: "PBI速度を表示する"
@@ -103,6 +127,9 @@ ja:
   label_setting_sprint_burndown_day_zero_explanation: "Use 'Begin' as an special date at the beginning of the Sprint burndown instead of 'End'"
   label_setting_story_points_custom_field: "ストーリーポイントのカスタムフィールド"
   label_setting_task_statuses: "スプリントボード用のタスクステータス"
+  label_setting_update_pbi_status_if_all_tasks_are_closed: "If all tasks are closed update PBI status to"
+  label_setting_use_remaining_story_points: "Use remaining SPs in PBIs"
+  label_setting_use_remaining_story_points_explanation: "Update remaining SPs for PBIs day by day will calculate a more precise Sprint burndown by SPs."
   label_setting_verification_activities: "検証する活動"
   label_scrum: "スクラム"
   label_sprint: "スプリント"
@@ -120,6 +147,7 @@ ja:
   label_sps_by_pbi_category: "PBIのカテゴリ毎のSP"
   label_sps_by_pbi_creation_date: "PBIの作成日毎のSP"
   label_sps_by_pbi_type: "PBIのトラッカー毎のSP"
+  label_sps_count: "Closed/total SPs"
   label_sps_stat: "(%{sps} sp - %{percentage}%)"
   label_sps_total: "合計 (%{sps} sp)"
   label_story_point_plural: "ストーリーポイント"
@@ -152,6 +180,7 @@ ja:
   label_tip_title: "スクラムプラグインチップス"
   label_total_effort: "合計作業量 (実績 + 残存)"
   label_velocity_all_pbis:
+    zero: "Use all PBIs from past Sprints to calculate the velocity"
     one: "最後のスプリントに含まれるPBIをベロシティ算出に使用する"
     other: "最後から %{count} つまでのスプリントに含まれるPBIをベロシティ算出に使用する"
   label_velocity_custom: "カスタム値:"
@@ -162,14 +191,18 @@ ja:
   notice_task_created: "タスクを作成しました"
   notice_unable_delete_sprint: "スプリントの削除失敗"
   project_module_scrum: "スクラム"
+  permission_edit_pending_effort: "Edit pending effort"
   permission_edit_product_backlog: "プロダクトバックログの編集"
+  permission_edit_remaining_story_points: "Edit remaining story points"
   permission_edit_sprint_board: "スプリントボードの編集"
   permission_manage_sprints: "スプリントの管理"
   permission_sort_product_backlog: "プロダクトバックログの並べ替え"
   permission_sort_sprint_board: "スプリントボードのソート"
+  permission_view_pending_effort: "View pending effort"
   permission_view_product_backlog: "プロダクトバックログの閲覧"
   permission_view_product_backlog_burndown: "プロダクトバックログバーンダウンの閲覧"
   permission_view_release_plan: "リリースプランの閲覧"
+  permission_view_remaining_story_points: "View remaining story points"
   permission_view_scrum_stats: "スクラム状態の閲覧"
   permission_view_sprint_board: "スプリントボードの閲覧"
   permission_view_sprint_burndown: "スプリントバーンダウンの閲覧"
