--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,11 +25,16 @@ en:
   field_shared: "Shared"
   field_shared_note: "A shared Sprint is visible in child projects, so you will be able to assign child projects issues to this Sprint."
   field_sprint: "Sprint"
+  label_all_but_total: "all except total"
+  label_add_pbi_at_bottom: "Add %{tracker} at product backlog top"
+  label_add_pbi_at_top: "Add %{tracker} at product backlog bottom"
   label_add_task: "Opens a pop-up windows to add a %{tracker} to this PBI"
   label_begin: "Begin"
   label_blocked: "Blocked"
   label_burndown: "%{name} burndown"
   label_check_dependencies: "Check dependencies"
+  label_closed_sps: "Closed SPs"
+  label_closed_story_points: "Closed story points"
   label_create_subtask: "Create subtask"
   label_date_previous_to: "Previous to %{date}"
   label_doer: "Doer"
@@ -43,26 +48,37 @@ en:
   label_estimated_vs_done_effort: "Estimated effort vs done effort"
   label_exit_fullscreen: "Exit fullscreen"
   label_filter_by_assignee: "Filter by assignee"
+  label_filter_by_project: "Filter by project"
   label_fullscreen: "Fullscreen"
   label_hours_per_story_point: "Hours per story point"
   label_invalid_dependencies: "There are invalid dependencies for the following PBIs:"
   label_invalid_dependencies_for_pbi: "%{pbi} blocks but it comes after:"
   label_issue_deviation: "This issue has a deviation of %{deviation}%"
   label_issue_speed: "The speed of this issue is %{speed}%"
-  label_media_last_n_sprints: "Media of last %{n} Sprints"
+  label_limited_to_n_series: "Project series have been limited to %{n}. Criteria: not closed projects, pending SPs."
+  label_media_last_n_sprints: "Last %{n} Sprints media"
   label_menu_product_backlog: "Backlog"
   label_menu_sprint: "Sprint"
+  label_move_not_closed_pbis_to_last_sprint: "Move not closed PBIs to latest Sprint"
   label_move_pbi_after: "Move after"
   label_move_pbi_before: "Move before"
   label_move_pbi_to_last_sprint: "Move to last Sprint"
   label_move_pbi_to_name: "Move to %{name}"
   label_no_invalid_dependencies: "There're not invalid dependencies."
+  label_nothing_to_move: "Nothing to move."
+  label_only_total: "only total"
   label_pbi_plural: "Product backlog items"
-  label_pbi_post_it: "Product backlog item post-it" 
+  label_pbi_post_it: "Product backlog item post-it"
+  label_pbi_status_auto_updated_all_tasks_closed: "PBI status auto updated to %{pbi_status} because all tasks were closed"
+  label_pbi_status_auto_updated_all_tasks_new: "PBI status auto updated to %{pbi_status} because all tasks were on %{task_status} status"
+  label_pbi_status_auto_updated_one_task_no_new: "PBI status auto updated to %{pbi_status} because at least one task wasn't on %{task_status} status"
+  label_pbis_count: "Closed/total PBIs"
+  label_pbis_moved: "Moved PBIs: %{pbis}."
   label_pending_effort_tooltip: "Pending effort (%{date}): %{hours} h"
   label_pending_sps: "Pending SPs"
   label_pending_sps_tooltip: "Pending SPs (%{date}): %{sps}"
   label_pending_story_points: "Pending story points %{pending_story_points} sp (%{sprint}: %{story_points} sp)"
+  label_percentage_closed_sps: "Closed/total SPs %"
   label_plugin_license: "Plugin license"
   label_plugin_license_title: "Plugin license, please read carefully"
   label_post_it: "Post-it"
@@ -73,6 +89,8 @@ en:
   label_release_plan: "Release plan"
   label_release_plan_name: "%{name} release plan"
   label_release_plan_stats: "A total of %{sps} SPs and %{pbis} PBIs (there are other %{pbis_without_sps} PBIs without estimation)"
+  label_remaining_story_point_plural: "Remaining story points"
+  label_remaining_story_point_unit: "rsp"
   label_reviewer: "Reviewer"
   label_scrum_stats: "Scrum stats"
   label_setting_auto_update_pbi_status: "Auto update parent PBIs"
@@ -86,9 +104,15 @@ en:
   label_setting_inherit_pbi_attributes: "When creating a task inherit parent product backlog item attributes"
   label_setting_low_speed: "Low speed percentage"
   label_setting_lowest_speed: "Lowest speed percentage"
+  label_setting_pbi_is_closed_if_tasks_are_closed: "PBI closed if children are closed"
+  label_setting_pbi_is_closed_if_tasks_are_closed_explanation: "This does not change PBI status but affects Scrum plugin features (boards, burndowns...)."
   label_setting_pbi_statuses: "PBI statuses for Product backlog & Sprint board"
+  label_setting_product_burndown_extra_sprints: "Render extra Sprints for subprojects"
+  label_setting_product_burndown_extra_sprints_explanation: "How many Sprints are rendered after tatol serie finishes (0 for unlimit)."
   label_setting_product_burndown_sprints: "Calculate it with this number of Sprints"
+  label_setting_product_burndown_sprints_explanation: "Put 0 to use all past Sprints in the speed calculation."
   label_setting_random_postit_rotation: "Random post-it rotation"
+  label_setting_remaining_story_points_custom_field: "Remaining story points custom field"
   label_setting_render_author_on_pbi: "Render author"
   label_setting_render_category_on_pbi: "Render category"
   label_setting_render_pbis_speed: "Render PBIs speed"
@@ -97,12 +121,16 @@ en:
   label_setting_render_tasks_speed: "Render tasks speed"
   label_setting_render_updated_on_pbi: "Render update timestamp"
   label_setting_render_version_on_pbi: "Render version"
+  label_setting_show_project_totals: "Show project totals"
   label_setting_simple_pbi_custom_field: "Simple PBI custom field"
   label_setting_sprint_board_fields_on_tracker: "Fields to render with %{tracker}"
   label_setting_sprint_burndown_day_zero: "Day 0"
-  label_setting_sprint_burndown_day_zero_explanation: "Use 'Begin' as an special date at the beginning of the Sprint burndown instead of 'End'"
+  label_setting_sprint_burndown_day_zero_explanation: "Use 'Begin' as an special date at the beginning of the Sprint burndown instead of 'End'."
   label_setting_story_points_custom_field: "Story points custom field"
   label_setting_task_statuses: "Task statuses for Sprint board"
+  label_setting_update_pbi_status_if_all_tasks_are_closed: "If all tasks are closed update PBI status to"
+  label_setting_use_remaining_story_points: "Use remaining SPs in PBIs"
+  label_setting_use_remaining_story_points_explanation: "Update remaining SPs for PBIs day by day will calculate a more precise Sprint burndown by SPs."
   label_setting_verification_activities: "Verification activities"
   label_scrum: "Scrum"
   label_sprint: "Sprint"
@@ -120,6 +148,7 @@ en:
   label_sps_by_pbi_category: "SPs by PBI category"
   label_sps_by_pbi_creation_date: "SPs by PBI creation date"
   label_sps_by_pbi_type: "SPs by PBI type"
+  label_sps_count: "Closed/total SPs"
   label_sps_stat: "(%{sps} sp - %{percentage}%)"
   label_sps_total: "Total (%{sps} sp)"
   label_story_point_plural: "Story points"
@@ -152,6 +181,7 @@ en:
   label_tip_title: "Scrum plugin tips"
   label_total_effort: "Total effort (spent + pending)"
   label_velocity_all_pbis:
+    zero: "Use all PBIs from past Sprints to calculate the velocity"
     one: "Use all PBIs from last Sprint to calculate the velocity"
     other: "Use all PBIs from last %{count} Sprints to calculate the velocity"
   label_velocity_custom: "Custom value:"
@@ -162,14 +192,18 @@ en:
   notice_task_created: "The task was successfully created"
   notice_unable_delete_sprint: "Fail to delete Sprint"
   project_module_scrum: "Scrum"
+  permission_edit_pending_effort: "Edit pending effort"
   permission_edit_product_backlog: "Edit product backlog"
+  permission_edit_remaining_story_points: "Edit remaining story points"
   permission_edit_sprint_board: "Edit Sprint board"
   permission_manage_sprints: "Manage Sprints"
   permission_sort_product_backlog: "Sort product backlog"
   permission_sort_sprint_board: "Sort Sprint board"
+  permission_view_pending_effort: "View pending effort"
   permission_view_product_backlog: "View product backlog"
   permission_view_product_backlog_burndown: "View product backlog burndown"
   permission_view_release_plan: "View release plan"
+  permission_view_remaining_story_points: "View remaining story points"
   permission_view_scrum_stats: "View scrum stats"
   permission_view_sprint_board: "View Sprint board"
   permission_view_sprint_burndown: "View Sprint burndown"
